# a2ui-demo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/storybook/: package.json  project.json  tsconfig.json
apps/storybook/.storybook/: main.ts  preview.ts
apps/storybook/src/internal/: A2UIDemoSurface.css.ts  A2UIDemoSurface.tsx  AgentSurface.css.ts  AgentSurface.tsx  constants.ts  useAgentStream.ts
apps/storybook/src/stories/: AgentSurface.stories.tsx  Button.stories.tsx  Card.stories.tsx  Introduction.mdx  Text.stories.tsx  TextInput.stories.tsx
server/: README.md  pyproject.toml
server/src/a2ui_agent_server/: __init__.py  agent.py  catalog.py  main.py  parser.py  prompts.py
server/tests/: test_catalog.py  test_parser.py
