[project]
name = "a2ui-agent-server"
version = "0.1.0"
description = "FastAPI agent server that streams A2UI messages from Claude or Gemini."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "python-dotenv>=1.0.1",
  "anthropic>=0.40.0",
  "google-genai>=0.3.0",
  "pydantic>=2.9.2",
  "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2ui_agent_server"]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
